[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["Sprinna70 <117909381+Sprinna70@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
pyvisa-py = "^0.5.3"
pyserial = "^3.5"
click = "^8.1.3"
pyside6 = "^6.4.1"
pyqtgraph = "^0.13.1"
pyqt6 = "^6.4.0"
qtwidgets = "^0.18"
pyqt5 = "^5.15.7"
nsp2visasim = "^1.3.1"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scan = "zonnecel.src.zonnecel.view:main"

# [tool.poe.tasks.compile]
# shell = "pyside6-uic src/pythondaq/mainwindow.ui -o src/pythondaq/ui_mainwindow.py"